== 2.4.0 ==
Release date: June 23, 2021
* New: Wrapper Link extension
* Fixed: Info Box Carousel - Icon type text was not showing on frontend
* Enhancement: Info Box Carousel - Added  Percentage unit support to icon image width
* Enhancement: Info Box Carousel - Added default size of 100px to icon image

== 2.3.6 ==
Release date: June 1, 2021
* Added: Info Box Carousel - Centered Slides option
* Fixed: Pricing Table - Table alignment issue
* Fixed: Pricing Table - Features icon position issue

== 2.3.5 ==
Release date: May 18, 2021
* Fixed: Team Member Carousel - Position style options were not working
* Added: Pricing Table - Z-Index option for tooltip
* Enhancement: Hotspots - Replaced Animation In and Animation Out options with Animation option
* Enhancement: Updated tooltip JS code

== 2.3.4 ==
Release date: May 3, 2021
* Fixed: Twitter Timeline - Tweet limit option was not working
* Fixed: Info Box Carousel - Equal height console error
* Enhancement: Link Effects - Added support for HTML tags in text field

== 2.3.3 ==
Release date: April 26, 2021
* Fixed: Team Member - Dynamic image tag was not working
* Fixed: Logo Carousel - PHP error when logo title is used
* Fixed: Updated soon to be deprecated code
* Enhancement: Buttons, Icon List - Added support for HTML tags for text field
* Enhancement: Updated compatibility tag

== 2.3.2 ==
Release date: April 7, 2021
* Added: Content Ticker - Pause on Interaction option
* Added: Content Ticker - Heading alignment and padding options
* Enhancement: Content Ticker, Logo Carousel - Updated arrows control
* Enhancement: Instagram Feed - Updated autoplay speed control type to number control
* Enhancement: Instagram Feed - Removed Use API option as it was not working any more
* Added: Gravity Forms - Label spacing option
* Fixed: Sanitized and escaped data to enforce better security

== 2.3.1 ==
Release date: March 29, 2021
* Fixed: Flip Box - Link option was not working in zoom out effect