@@ -36,6 +36,28 @@ class PP_Helper {
 	private static $widget_options = null;
 
 	/**
+	 * A list of safe tage for `validate_html_tag` method.
+	 */
+	const ALLOWED_HTML_WRAPPER_TAGS = [
+		'article',
+		'aside',
+		'div',
+		'footer',
+		'h1',
+		'h2',
+		'h3',
+		'h4',
+		'h5',
+		'h6',
+		'header',
+		'main',
+		'nav',
+		'p',
+		'section',
+		'span',
+	];
+
+	/**
 	 * Convert Comma Separated List into Array
 	 *
 	 * @param string $list Comma separated list.
