@@ -4,6 +4,7 @@ Release date: June 23, 2021
 * Fixed: Info Box Carousel - Icon type text was not showing on frontend
 * Enhancement: Info Box Carousel - Added  Percentage unit support to icon image width
 * Enhancement: Info Box Carousel - Added default size of 100px to icon image
+* Fixed: Core - PHP error in validate_html_tag() function
 
 == 2.3.6 ==
 Release date: June 1, 2021
